cmake_minimum_required(VERSION 3.23)
project(DEPSTAR_CE C)

set(CMAKE_C_STANDARD 11)

add_executable(DEPSTAR_CE
        "CCP/C Language/CCP Practical List/practical_1-1.c"
        "CCP/C Language/CCP Practical List/practical_1-2.c"
        "CCP/C Language/CCP Practical List/practical_1-2_simple.c"
        "CCP/C Language/CCP Practical List/practical_2-1.c"
        "CCP/C Language/CCP Practical List/practical_2-2.c"
        "CCP/C Language/CCP Practical List/practical_2-3.c"
        "CCP/C Language/CCP Practical List/practical_3-1.c"
        "CCP/C Language/CCP Practical List/practical_3-2-b.c"
        "CCP/C Language/CCP Practical List/practical_3-2.c"
        "CCP/C Language/CCP Practical List/practical_4-1-b.c"
        "CCP/C Language/CCP Practical List/practical_4-1.c"
        "CCP/C Language/CCP Practical List/practical_4-2.c"
        "CCP/C Language/CCP Practical List/practical_4-3.c"
        "CCP/C Language/CCP Practical List/practical_5-1.c"
        "CCP/C Language/CCP Practical List/practical_5-3.c"
        "CCP/C Language/CCP Practical List/practical_5-4.c"
        "CCP/C Language/CCP Practical List/practical_6-1.c"
        "CCP/C Language/CCP Practical List/practical_6-2.c"
        "CCP/C Language/Extra/binary_to_decimal.c"
        "CCP/C Language/Extra/border_num_tringle.c"
        "CCP/C Language/Extra/box_patten.c"
        "CCP/C Language/Extra/conversation.c"
        "CCP/C Language/Extra/decimal_to_binary.c"
        "CCP/C Language/Extra/dynamic_memory.c"
        "CCP/C Language/Extra/factorial_with_recursion.c"
        "CCP/C Language/Extra/goto_stat.c"
        "CCP/C Language/Extra/if.c"
        "CCP/C Language/Extra/if2.c"
        "CCP/C Language/Extra/triangle.c"
        "CCP/C Language/Extra/typeof_function.c"
        "CCP/C Language/age.c"
        "CCP/C Language/all_loops.c"
        "CCP/C Language/char_is_vowel.c"
        "CCP/C Language/check_char_or_digit.c"
        "CCP/C Language/days_in_month.c"
        "CCP/C Language/even_odd.c"
        "CCP/C Language/even_series_by_for_loop.c"
        "CCP/C Language/factorial.c"
        "CCP/C Language/fibonacci_by_factorial.c"
        "CCP/C Language/leap_year.c"
        "CCP/C Language/max_min.c"
        "CCP/C Language/note_of_currency.c"
        "CCP/C Language/odd_by_whileloop.c"
        "CCP/C Language/positive_negative.c"
        "CCP/C Language/result_grading.c"
        "CCP/C Language/sum_of_2_num.c"
        "CCP/C Language/triangle_is_valid_or_not.c"
        "CCP/C Language/weekDays_ifladder.c")
